gesture events are now dispatched to JavaScript

--- a/chromepadder.html
+++ b/chromepadder.html
@@ -2,5 +2,5 @@
 <body>
 <script src="gamepad.js"></script>
 <script src="chromepadder.js"></script>
-<embed type="application/x-chromepadder-kinect" id="kinectplugin" hidden="true">
+<embed type="application/x-chromepadder-nui" id="nuiplugin" hidden="true">
 
